# project_g

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: attribute_catalog.md  database_design.md  entity_attributes.md  entity_definition.md  mud_game_maker_plan.md  phase1_implementation_plan.md  phase2_implementation_plan.md  phase3_implementation_plan.md  rust_mud_2d_engine_architecture_20260219.md  rust_mud_2d_engine_implementation_plan_20260219.md
engine/: DIRECTORY.md
engine/crates/ecs_adapter/: Cargo.toml
engine/crates/ecs_adapter/src/: allocator.rs
engine/crates/engine_core/: Cargo.toml
engine/crates/engine_core/src/: events.rs
engine/crates/net/: Cargo.toml
engine/crates/net/src/: gmcp.rs  lib.rs  output_router.rs  protocol.rs  telnet.rs
engine/crates/persistence/: Cargo.toml
engine/crates/persistence/src/: registry.rs  snapshot.rs
engine/crates/plugin_runtime/: Cargo.toml
engine/crates/plugin_runtime/src/: config.rs  memory.rs  plugin.rs  registry.rs
engine/crates/scripting/: Cargo.toml
engine/crates/scripting/src/: auth.rs  engine.rs  error.rs  hooks.rs  lib.rs  sandbox.rs
engine/crates/scripting/src/api/: auth.rs  log.rs  mod.rs  output.rs  session.rs
maker_common/: Cargo.toml
maker_common/src/: content.rs  lib.rs  process.rs  (+1 more)
project_2d/: Cargo.toml  DIRECTORY.md  server.toml
project_2d/src/: components.rs  config.rs  main.rs  shutdown.rs
project_2d/tests/: grid_scripting_test.rs  ws_grid_integration.rs
project_2d/web_client/: package.json  vite.config.ts
project_2d/web_client/src/: input.ts  main.ts  state.ts
project_mud/: Cargo.toml  DIRECTORY.md  server.toml  triggers.json  world.json
project_mud/content/: attribute_schema.json  classes.json  dialogues.json  items.json  level_table.json  monsters.json  quests.json  races.json  shops.json  skills.json
project_mud/crates/mud/: Cargo.toml
project_mud/crates/mud/src/: components.rs  output.rs  parser.rs  persistence_setup.rs  script_setup.rs  session.rs
project_mud/crates/mud/src/systems/: mod.rs
project_mud/crates/player_db/src/: db.rs  lib.rs
project_mud/docs/: CONTENT_DEV_GUIDE.md
project_mud/scripts/: 00_utils.lua  01_world_setup.lua  02_commands.lua  03_combat.lua  05_login.lua  05_triggers.lua  06_custom_commands.lua  07_rpg_systems.lua  08_item_effects.lua  09_shops.lua  10_dialogues.lua
project_mud/src/: auth_adapter.rs  config.rs  main.rs
project_mud/tests/: content_registry_test.rs  fuel_determinism.rs  game_systems_integration.rs  server_integration.rs  snapshot_integration.rs  tick_determinism.rs  tick_simulation.rs  wasm_plugin_test.rs
project_mud_maker/: Cargo.toml  server.toml
project_mud_maker/src/: config.rs  main.rs  state.rs
project_mud_maker/src/api/: attribute_schemas.rs  dialogues.rs  items.rs  level_table.rs  mod.rs  quests.rs  shops.rs  triggers.rs  world.rs  ws.rs
project_mud_maker/web_client/: index.html  package-lock.json  package.json  vite.config.ts
project_mud_maker/web_client/src/: App.tsx  index.css
project_mud_maker/web_client/src/api/: client.ts
project_mud_maker/web_client/src/components/: BalanceView.tsx  Layout.tsx  Modal.tsx  RoomNode.tsx  RoomPanel.tsx  Tooltip.tsx
project_mud_maker/web_client/src/hooks/: useHistory.ts
project_mud_maker/web_client/src/pages/: AttributeSchemaEditor.tsx  Database.tsx  DialogueEditor.tsx  LevelTableEditor.tsx  MapEditor.tsx  Preview.tsx  QuestEditor.tsx  ScriptEditor.tsx  TriggerEditor.tsx
project_mud_maker/web_client/src/types/: api.ts  attribute_schema.ts  content.ts  dialogue.ts  level_table.ts  quest.ts  shop.ts  trigger.ts  world.ts
rust_mud_engine/: Cargo.toml  server.toml
rust_mud_engine/crates/ecs_adapter/src/: bevy_backend.rs  error.rs  lib.rs  types.rs
rust_mud_engine/crates/engine_core/: Cargo.toml
rust_mud_engine/crates/engine_core/src/: command.rs  lib.rs  tick.rs
rust_mud_engine/crates/mud/: Cargo.toml
rust_mud_engine/crates/mud/src/: lib.rs  parser.rs  script_setup.rs
rust_mud_engine/crates/mud/src/systems/: mod.rs
rust_mud_engine/crates/net/: Cargo.toml
rust_mud_engine/crates/net/src/: ansi.rs  channels.rs  lib.rs  output_router.rs  rate_limiter.rs  server.rs  web_server.rs  ws_server.rs
rust_mud_engine/crates/observability/: Cargo.toml
rust_mud_engine/crates/persistence/: Cargo.toml
rust_mud_engine/crates/persistence/src/: error.rs  lib.rs  manager.rs
rust_mud_engine/crates/player_db/: Cargo.toml
rust_mud_engine/crates/player_db/src/: account.rs  character.rs  error.rs  schema.rs
rust_mud_engine/crates/plugin_abi/: Cargo.toml
rust_mud_engine/crates/plugin_abi/src/: lib.rs
rust_mud_engine/crates/plugin_runtime/: Cargo.toml
rust_mud_engine/crates/plugin_runtime/src/: error.rs  host_api.rs  lib.rs  serializer.rs
rust_mud_engine/crates/scripting/: Cargo.toml
rust_mud_engine/crates/scripting/src/: component_registry.rs  content.rs  engine.rs  error.rs  hooks.rs  lib.rs  template.rs
rust_mud_engine/crates/scripting/src/api/: ecs.rs  mod.rs  space.rs
rust_mud_engine/crates/session/: Cargo.toml
rust_mud_engine/crates/session/src/: lib.rs
rust_mud_engine/crates/space/: Cargo.toml
rust_mud_engine/crates/space/src/: lib.rs
rust_mud_engine/plugins/test_infinite_loop/src/: lib.rs
rust_mud_engine/plugins/test_movement/: Cargo.toml
rust_mud_engine/plugins/test_movement/src/: lib.rs
rust_mud_engine/scripts/: 00_utils.lua  01_world_setup.lua  03_combat.lua  04_admin.lua
rust_mud_engine/src/: config.rs  lib.rs  main.rs
rust_mud_engine/test_fixtures/: test_movement.wasm
rust_mud_engine/tests/: content_registry_test.rs  grid_space_test.rs  grid_tick_integration.rs  memory_grow_stress.rs  server_integration.rs  space_test.rs  ws_grid_integration.rs
rust_mud_engine/web_dist/: index.html
rust_mud_engine/web_dist/assets/: BufferResource-WIESB-Ab.js  CanvasRenderer-C-ua535Q.js  Filter-BmGCg-xZ.js  RenderTargetSystem-iD8Xu7Cs.js  WebGLRenderer-DaWU7OLG.js  WebGPURenderer-CDKIQ5QT.js  browserAll-DlFl_t4B.js  index-BbnfhOFq.js  webworkerAll-By_n4wfp.js
web_client/: index.html  package-lock.json  vite.config.ts
(+14 files in other folders)
