[package]
name = "project_mud"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mud_server"
path = "src/main.rs"

[dependencies]
ecs_adapter = { workspace = true }
engine_core = { workspace = true }
space = { workspace = true }
observability = { workspace = true }
session = { workspace = true }
scripting = { workspace = true }
persistence = { workspace = true }
net = { workspace = true }
mud = { workspace = true }
player_db = { workspace = true }
plugin_abi = { workspace = true }
plugin_runtime = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
wasmtime = "41"

[dev-dependencies]
tempfile = "3"
