[workspace]
resolver = "2"
exclude = [
    "plugins/test_movement",
    "plugins/test_infinite_loop",
    "plugins/test_panic",
]
members = [
    "crates/ecs_adapter",
    "crates/engine_core",
    "crates/space",
    "crates/observability",
    "crates/plugin_abi",
    "crates/plugin_runtime",
    "crates/session",
    "crates/mud",
    "crates/persistence",
    "crates/net",
    "crates/scripting",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
postcard = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde_json = "1"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }

# Root package for integration tests
[package]
name = "rust_mud_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_adapter = { path = "crates/ecs_adapter" }
engine_core = { path = "crates/engine_core" }
space = { path = "crates/space" }
observability = { path = "crates/observability" }
plugin_abi = { path = "crates/plugin_abi" }
plugin_runtime = { path = "crates/plugin_runtime" }
session = { path = "crates/session" }
mud = { path = "crates/mud" }
persistence = { path = "crates/persistence" }
net = { path = "crates/net" }
scripting = { path = "crates/scripting" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
wasmtime = "41"
