[package]
name = "ecs_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.15", default-features = false }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
