[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_adapter = { workspace = true }
space = { workspace = true }
observability = { workspace = true }
plugin_abi = { workspace = true }
plugin_runtime = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
tracing-subscriber = { workspace = true }
