[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
session = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
