[package]
name = "mud"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_adapter = { workspace = true }
space = { workspace = true }
session = { workspace = true }
persistence = { workspace = true }
scripting = { workspace = true }
# Required for Component derive macro resolution (derive expands to ::bevy_ecs::...)
bevy_ecs = { version = "0.15", default-features = false }
serde = { workspace = true }
serde_json = "1"
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
