[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_adapter = { path = "../ecs_adapter" }
space = { path = "../space" }
observability = { path = "../observability" }
plugin_abi = { path = "../plugin_abi" }
plugin_runtime = { path = "../plugin_runtime" }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
tracing-subscriber = { workspace = true }
