[package]
name = "mud"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_adapter = { path = "../ecs_adapter" }
space = { path = "../space" }
session = { path = "../session" }
persistence = { path = "../persistence" }
# Required for Component derive macro resolution (derive expands to ::bevy_ecs::...)
bevy_ecs = { version = "0.15", default-features = false }
scripting = { path = "../scripting" }
serde = { workspace = true }
serde_json = "1"
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
