[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_adapter = { path = "../ecs_adapter" }
space = { path = "../space" }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bevy_ecs = { version = "0.15", default-features = false }
