[package]
name = "player_db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
