[package]
name = "scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_adapter = { path = "../ecs_adapter" }
space = { path = "../space" }
session = { path = "../session" }
mlua = { version = "0.10", features = ["luau", "vendored", "send", "serialize"] }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
bevy_ecs = { version = "0.15", default-features = false }
